src/objects/Rate_plan__c.object
<CustomObject>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Rate plans</relationshipLabel>
        <relationshipName>Rate_plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Rate plan</label>
    <nameField>
        <label>Rate plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rate plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>